Curve Modifier does not work when used in a Background scene #40556

Closed
opened 2014-06-09 21:22:49 +02:00 by Witold Jaworski · 8 comments

System Information
platform: b'Windows 8.1:64bit'

renderer: 'GeForce GT 740M/PCIe/SSE2'
vendor: 'NVIDIA Corporation'
version: '4.4.0'

Blender Version
Broken:
Blender version 2.70 (sub 0), branch b'master', commit date b'2014-04-10' b'11:49', hash b'f93bc76', b'Release'
build date: b'2014-04-11', b'06:43:29'

Worked: I am not sure, but probably one of the Blender 2.6x (however, the same error is in 2.69, I have checked it)

Short description of error
Curve modifier does not work when applied to a mesh used in a background scene.
(When you switch to this background scene, it works).

Exact steps for others to reproduce the error

  1. Open enclosed file curves2.blend
  2. Note that the second tube (from Background scene) is straight (which is wrong, I will show it within a moment)
  3. Switch to the Background scene
  4. Switch back to Foreground scene - note that the second tube (from Background scene) is curved (which is OK)

Comment: in the case of curves1.blend file the Foreground scene uses the Background scene as the background. In the scene
Background there are clones of the objects from the Foreground scene. They should be identical, but it depends on the scene you open as the{F93703} first.

A second case (extracted from a real model) where switching scenes does not help (I suppose that it is related{F93704} to the same bug). It contains two identical clones of an airplane exhaust stack:

  1. Open enclosed file curves3.blend. It contains two scenes: "160" and "316". Scene "316" is set as the background scene of scene "160"
  2. Note, that the upper object (coming from scene "316") is straight (bad), while the lower object (coming from scene "160") is curved (OK);
  3. Switch to scene "316". Note that the object becomes curved (it looks OK now)
  4. Switch back to scene "160". Unlike in curves2.blend, it does not help - the object from scene "316" is straight again.
**System Information** platform: b'Windows 8.1:64bit' renderer: 'GeForce GT 740M/PCIe/SSE2' vendor: 'NVIDIA Corporation' version: '4.4.0' **Blender Version** Broken: Blender version 2.70 (sub 0), branch b'master', commit date b'2014-04-10' b'11:49', hash b'f93bc76', b'Release' build date: b'2014-04-11', b'06:43:29' Worked: I am not sure, but probably one of the Blender 2.6x (however, the same error is in 2.69, I have checked it) **Short description of error** Curve modifier does not work when applied to a mesh used in a background scene. (When you switch to this background scene, it works). **Exact steps for others to reproduce the error** 1. Open enclosed file curves2.blend 2. Note that the second tube (from Background scene) is straight (which is wrong, I will show it within a moment) 3. Switch to the Background scene 4. Switch back to Foreground scene - note that the second tube (from Background scene) is curved (which is OK) Comment: in the case of curves1.blend file the Foreground scene uses the Background scene as the background. In the scene Background there are clones of the objects from the Foreground scene. They should be identical, but it depends on the scene you open as the{[F93703](https://archive.blender.org/developer/F93703/curves2.blend)} first. A second case (extracted from a real model) where switching scenes does not help (I suppose that it is related{[F93704](https://archive.blender.org/developer/F93704/curves3.blend)} to the same bug). It contains two identical clones of an airplane exhaust stack: 1. Open enclosed file curves3.blend. It contains two scenes: "160" and "316". Scene "316" is set as the background scene of scene "160" 2. Note, that the upper object (coming from scene "316") is straight (bad), while the lower object (coming from scene "160") is curved (OK); 3. Switch to scene "316". Note that the object becomes curved (it looks OK now) 4. Switch back to scene "160". Unlike in curves2.blend, it does not help - the object from scene "316" is straight again.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @WitoldJaworski

Added subscriber: @WitoldJaworski

I can see that I embedded files in random places of this text - excuse me, this is my first bug report on this new platform. Here they are:
curves2.blend
curves3.blend

I can see that I embedded files in random places of this text - excuse me, this is my first bug report on this new platform. Here they are: [curves2.blend](https://archive.blender.org/developer/F93703/curves2.blend) [curves3.blend](https://archive.blender.org/developer/F93704/curves3.blend)

I have checked that this problem remains in the latest testbuild of Blender 2.71:

version 2.70 (sub 5), branch b'HEAD', commit date b'2014-05-27' b'14:09', hash b'517094a', b'Release'
build date: b'2014-05-27', b'19:17:01'

I have checked that this problem remains in the latest testbuild of Blender 2.71: version 2.70 (sub 5), branch b'HEAD', commit date b'2014-05-27' b'14:09', hash b'517094a', b'Release' build date: b'2014-05-27', b'19:17:01'

I have checked that this problem remains in the Blender 2.71 RC2:

version 2.71 (sub 0), branch b'master', commit date b'2014-06-16' b'09:48', hash b'a19c1be', b'Release'
build date: b'2014-06-16', b'14:21:42'

I have checked that this problem remains in the Blender 2.71 RC2: version 2.71 (sub 0), branch b'master', commit date b'2014-06-16' b'09:48', hash b'a19c1be', b'Release' build date: b'2014-06-16', b'14:21:42'
Lukas Tönne self-assigned this 2014-07-01 09:58:12 +02:00

This issue was referenced by 61e5f81e37

This issue was referenced by 61e5f81e37d5365ebb9da49ea9b6f62f4110d054

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 61e5f81e37.

Closed by commit 61e5f81e37.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40556
No description provided.