Fix T40556: Curve Modifier does not work when used in a Background scene

A bit hackish solution for now, cleaner solution we'll look into as a
part of the new DAG project, when it's clear what kind of data is passed
to the evaluation callbacks.